--- a/css/styles.css
+++ b/css/styles.css
@@ -485,7 +485,7 @@ h1 b {
     position: absolute;
     background-color: #cb3244;
     padding: 1em 1em;
-    border-radius: 2em;
+    border-radius: 0.5em;
     box-shadow: 0px 0px 20px -6px rgba(0, 0, 0, 0.418);
     left: 0;
     right: 0;
@@ -525,6 +525,20 @@ h1 b {
     cursor: pointer;
     font-family: Circular;
     box-shadow: 0px 0px 20px -6px rgba(0, 0, 0, 0.418);
+    width: 150px;
+    transition: 0.5s;
+}
+
+.paymentbutton2 {
+    /* padding: 15px 32px; */
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 0px 10px -20px 0px;
+    cursor: pointer;
+    font-family: Circular;
+    /* box-shadow: 0px 0px 20px -6px rgba(0, 0, 0, 0.418); */
     width: 150px;
     transition: 0.5s;
 }
